--- a/css_components/css_gridpanel.css
+++ b/css_components/css_gridpanel.css
@@ -5,7 +5,9 @@
     Description:
         Este archivo contiene los estilos para la creacion de un grid
 */
-
+.divgridPager{
+	margin-top:-2px;
+}
 .gridColumnItem{
  position: relative;
 }
@@ -238,7 +240,6 @@ background: #f0ad4e;
     border: 1px solid #F5F0F0;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;
-    padding: 0px 5px;
 }
 .gridContainer table tr:hover 
 {
