--- a/css_components/OnOff.css
+++ b/css_components/OnOff.css
@@ -18,6 +18,20 @@
      width: 13px;
      height: 11px;
 }
+.OnOff.minier .switch-button-background .switch-button-ON{
+	font-weight: bold;
+    line-height: 10px;
+    font-size: 6px;
+	text-align: left;
+	font-family: monospace;
+}
+.OnOff.minier .switch-button-background .switch-button-OFF{
+	font-weight: bold;
+    line-height: 10px;
+    font-size: 6px;
+	text-align: right;
+	font-family: monospace;
+}
 .OnOff.mini .switch-button-background{
     width: 30px;
     height: 14px;
@@ -26,6 +40,20 @@
      width: 15px;
      height: 14px;
 }
+.OnOff.mini .switch-button-background .switch-button-ON{
+	font-weight: bold;
+    line-height: 13px;
+    font-size: 8px;
+	text-align: left;
+	font-family: monospace;
+}
+.OnOff.mini .switch-button-background .switch-button-OFF{
+	font-weight: bold;
+    line-height: 13px;
+    font-size: 8px;
+	text-align: right;
+	font-family: monospace;
+}
 .OnOff.small .switch-button-background{
     width: 35px;
     height: 17px;
@@ -33,6 +61,18 @@
 .OnOff.small .switch-button-background .switch-button-button{
      width: 17px;
      height: 17px;
+}
+.OnOff.small .switch-button-background .switch-button-ON{
+	font-weight: bold;
+    line-height: 16px;
+    font-size: 9px;
+	text-align: left;
+}
+.OnOff.small .switch-button-background .switch-button-OFF{
+	font-weight: bold;
+    line-height: 16px;
+    font-size: 9px;
+	text-align: right;
 }
 .OnOff.medium .switch-button-background{
     width: 40px;
